2009-01-26  Alberto Garcia  <agarcia@igalia.com>

	* src/userconfig.c (vgl_user_cfg_read): Fix memory leak

2009-01-26  Alberto Garcia  <agarcia@igalia.com>

	* src/scrobbler.c (rsp_session_new): Make sure that we don't
	return a pointer to a destroyed RspSession.

2009-01-20  Alberto Garcia  <agarcia@igalia.com>

	* src/audio.c (lastfm_audio_get_volume, lastfm_audio_set_volume)
	* src/dlwin.c (dlwin_progress_cb): Use CLAMP to ensure that a
	variable is between two values.

2009-01-18  Alberto Garcia  <agarcia@igalia.com>

	* debian/changelog
	* debian/rules: Use DEB_INSTALL_* variables instead of 'dirs' and
	'docs' files

2009-01-08  Alberto Garcia  <agarcia@igalia.com>

	* src/audio.c (default_sinks): Use gconfaudiosink in Gnome.

	Fixes #2762 (gstreamer audiosinks)

2008-12-23  Alberto Garcia  <agarcia@igalia.com>

	* src/uimisc.c (ui_input_dialog_with_list, ui_usertag_dialog)
	(recommwin_run, ui_create_combo_box_entry): Autocompletion support
	for combo box entries.

2008-12-22  Alberto Garcia  <agarcia@igalia.com>

	* src/uimisc.h
	* src/uimisc.c (ui_usertag_dialog)
	* src/vgl-main-window.c (create_main_menu)
	* src/controller.c (controller_play_usertag_radio_cb)
	(controller_play_others_radio):
	New menu option to play any user's tag radio.

2008-11-25  Alberto Garcia  <agarcia@igalia.com>

	* src/main.c (main): Call dbus_g_thread_init() if we have DBUS
	support, even if the "Set IM status" feature is not enabled.

2008-11-22  Alberto Garcia  <agarcia@igalia.com>

	* src/imstatus.c (usercfg_changed_cb): Don't do anything if the IM
	configuration hasn't changed.

2008-11-22  Alberto Garcia  <agarcia@igalia.com>

	* src/imstatus.h
	* src/imstatus.c (im_set_status_idle, usercfg_changed_cb)
	(player_stopped_cb, track_started_cb, controller_destroyed_cb)
	(im_status_init)
	* src/controller.c (apply_usercfg, controller_audio_started_cb)
	(controller_stop_playing, controller_run_app):
	Manage "Set IM status" using signals.
